COMPILE_WARNING_AS_ERROR: Add command-line option

Add command-line option `--compile-no-warning-as-error` to ignore value of
`COMPILE_WARNING_AS_ERROR`.

Issue: #19085